Fixed some spacing

--- a/style.css
+++ b/style.css
@@ -48,8 +48,8 @@
   --fs-500: 1.125rem;
   --fs-600: 1.25rem;
   --fs-700: 1.75rem;
-  --fs-800: 2.4rem;
-  --fs-900: 2.5rem;
+  --fs-800: 2.45rem;
+  --fs-900: 2.75rem; 
 }
 
 /* Andy Bell reset */
@@ -162,7 +162,7 @@ header h1 {
 .recipe--title {
   font-family: YoungSerif, serif;
   font-weight: var(--fw-500);
-  font-size: var(--fs-800);
+  font-size: 40px;
 }
 
 .recipe--description {
@@ -328,7 +328,7 @@ ol.recipe--instructions {
 @media (width >=40ch) {
   .wrapper {
     padding-top: 2.5rem;
-    border-radius: 1.5rem;
+    border-radius: 1.25rem;
     margin-left: auto;
     margin-right: auto;
     margin-top: 2.5rem;
@@ -342,7 +342,7 @@ ol.recipe--instructions {
 
   .recipe--image {
     margin-inline: auto;
-    border-radius: 1rem;
+    border-radius: 0.75rem;
     width: min(64ch, 100% - 5rem);
   }
 
@@ -357,6 +357,24 @@ ol.recipe--instructions {
 
   .recipe--description {
     margin-bottom: 2rem;
+  }
+
+  .recipe--preparation_time > h2 {
+    padding-top: 1.5rem;
+    padding-left: 1.75rem;
+  }
+
+  .recipe--preparation_time > ul {
+    margin-top: 0.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+  .recipe--preparation_time > ul > li::before {
+    left: -0.3rem;
+  }
+
+  .recipe--preparation_time > ul > li {
+    padding-left: 1.75rem;
   }
 
   .nutrition--information {
@@ -376,6 +394,10 @@ ol.recipe--instructions {
 
   .recipe--section ol {
     margin-left: 2.5rem;
+  }
+
+  .recipe--section h2 {
+    margin-top: 1.5rem;
   }
 
   .recipe {
